infra/kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamtasks-client-svc
  labels:
    app: teamtasks-client
    component: client
spec:
  selector:
    app: teamtasks-client
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
